--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,18 +2,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
   {% include head.html %}
+  {% include google_analytics.html %}
 
   <body>
 
     <div class="container content">
       <div class="masthead">
         <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
+          <a href="/" title="Home">{{ site.title }}</a>
+
+          {% for page in site.pages_list %}
+              &nbsp;&nbsp;&nbsp;<small><a href="{{ page[1]  }}">{{ page[0] }}</a></small>
+          {% endfor %}
+
         </h3>
       </div>
 
       {{ content }}
+
+      {% include comments.html %}
 
       <div class="footer">
         <p>
