--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
     <div class="container content">
       <div class="masthead">
         <h3 class="masthead-title">
-          <a href="/" title="Home">{{ site.title }}</a>
-
-          {% for page in site.pages_list %}
+          <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
+          
+		  {% for page in site.pages_list %}
               &nbsp;&nbsp;&nbsp;<small><a href="{{ page[1]  }}">{{ page[0] }}</a></small>
           {% endfor %}
 
@@ -19,8 +19,8 @@
       </div>
 
       {{ content }}
-
-      {% include comments.html %}
+	  
+	  {% include comments.html %}
 
       <div class="footer">
         <p>
