--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,25 +1,65 @@
 ---
-layout: default
+layout: blog
 ---
 
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
-  {{ content }}
-</div>
+<section class="post">
+  <div class="back">
+    <a href="/blog">&larr; Back</a>
+  </div>
 
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ site.baseurl }}{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
+
+  <h1 class="title">
+    <a href="{{ page.url }}">{{ page.title }}</a>
+  </h1>
+
+  <section class="byline">
+    {{ page.date | date: "%B %e, %Y" }}
+  </section>
+    
+  {{ content }}
+  
+  <div class="twitter">
+    <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="{{ site.twitter }}">Tweet</a>
+    <a href="http://twitter.com/{{ site.twitter }}" class="twitter-follow-button" data-show-count="false">Follow @{{ site.twitter }}</a>
+  </div>
+    
+  <section class="meta">
+    <h3>Discussion</h3>
+
+    <section class="copy">
+      <div class="pure-g">
+        <div class="pure-u-1-8" style="box-sizing: border-box; padding: 5px 10px 5px 0px">
+          <a href="https://twitter.com/{{ site.twitter }}" target="_blank">
+            <img src="{{ site.gravatar_url }}?s=160" />
           </a>
-        </h3>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
+        </div>
+        <div class="pure-u-7-8">
+          <p style="margin-top: 0px;">
+            Sleep deprived Electrical and &amp; Electronic Engineering graduate at <a href="http://www.aston.ac.uk/">Aston University</a> in the morning, wide awake playing football on campus.
+            <br>
+            You might want to follow me on twitter. I promise I won't hijack your timeline, I don't tweet too frequently!
+          </p>
+        </div>
+      </div>
+
+      <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+      <div id="disqus_thread" aria-live="polite">
+        {% if site.disqus_short_name %}
+        <script type="text/javascript">
+              var disqus_shortname = '{{ site.disqus_short_name }}';
+                // var disqus_developer = 1;
+                var disqus_identifier = '{{ site.url }}{{ page.url }}';
+                var disqus_url = '{{ site.url }}{{ page.url }}';
+                var disqus_script = 'embed.js';
+            (function () {
+              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+              dsq.src = 'http://' + disqus_shortname + '.disqus.com/' + disqus_script;
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            }());
+        </script>
+        {% endif %}
+      </div>
+
+    </section>
+  </section>
+</section>
