--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,11 @@
 <section class="navigation">
   <div class="holder">
-    SM
+    TS
     <div class="nav">
       <a href="/">Home</a> <br>
-      <a href="/blog">Blog</a> <br>
+      <a href="/archive">Blog</a> <br>
       <a href="/about">About</a> <br>
+	  <a href="/academic">Academic</a> <br>
       <a href="/projects">Projects</a> <br>
     </div>
   </div>
