--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ layout: blog
         </div>
         <div class="pure-u-7-8">
           <p style="margin-top: 0px;">
-            Sleep deprived Electrical and &amp; Electronic Engineering graduate at <a href="http://www.aston.ac.uk/">Aston University</a> in the morning, wide awake playing football on campus.
+            I'm a sleep deprived 3rd year Electronics &amp; Communication Undergrad at <a href="http://www.iitr.ac.in">IIT Roorkee</a> in the morning, wide awake squash player in the evening, batman till sunrise.
             <br>
             You might want to follow me on twitter. I promise I won't hijack your timeline, I don't tweet too frequently!
           </p>
