--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,9 +35,7 @@ layout: blog
         </div>
         <div class="pure-u-7-8">
           <p style="margin-top: 0px;">
-            I'm a sleep deprived Electrical &amp; Electronics graduate from <a href="http://www.aston.ac.uk/">Aston University</a> in the morning, wide awake football player in the evening, cricket batsman till sunrise.
-            <br>
-            Follow me on twitter. I promise I won't hijack your timeline.
+            If you have any questions or comments, please post them below. If you liked this post, you can share it with followers or follow me on Twitter!
           </p>
         </div>
       </div>
