--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="default">
+<section class="post">
   <div class="back">
     <a href="/blog">&larr; Back</a>
   </div>
