Revert "update default"
This reverts commit 2ac4d987d3bdd94b1acd0ce0097562598b563fe6.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="post">
+<section class="default">
   <div class="back">
     <a href="/blog">&larr; Back</a>
   </div>
