--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -17,6 +17,14 @@ layout: about
   </section>
     
   {{ content }}
+  
+  <div class="twitter">
+    <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="{{ site.twitter }}">Tweet</a>
+    <a href="http://twitter.com/{{ site.twitter }}" class="twitter-follow-button" data-show-count="false">Follow @{{ site.twitter }}</a>
+  </div>
+    
+  <section class="meta">
+    <h3>Discussion</h3>
 
     <section class="copy">
       <div class="pure-g">
@@ -52,3 +60,4 @@ layout: about
 
     </section>
   </section>
+</section>
